--- a/Changelog
+++ b/Changelog
@@ -10,3 +10,6 @@ v1.2.3 (11/02/26)
 v1.2.4 (12/02/26)
 -Allègement visuel : infos de compatibilité déplacées en haut de page
 -Nouveau système de version des fichiers propre au Store
+
+v1.2.5 (13/02/26)
+-Modification du système d'hebergement des fichiers
